2007-08-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #329746

	* gui/dialogs/comp-editor.c: (make_icon_from_comp):
	Return proper icon for memo components.
	* gui/dialogs/delete-comp.c: (delete_component_dialog),
	(prompt_retract_dialog):
	* gui/dialogs/changed-comp.c: (changed_component_dialog):
	* gui/dialogs/comp-editor.c: (make_title_from_comp),
	(make_title_from_string):
	* gui/dialogs/cancel-comp.c: (cancel_component_dialog):
	* gui/dialogs/delete-error.c: (delete_error_dialog):
	* gui/dialogs/recur-comp.c: (recur_component_dialog):
	* gui/itip-utils.c: (comp_subject), (comp_description):
	* calendar.error.xml:
	Renamed 'Journal' to 'Memo'.

2007-08-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #428110

	* gui/memos-component.c: (update_single_object):
	Added parameter to rather fail on adding same object with drag&drop,
	rather than modify and then delete existing one.
	* gui/memos-component.c: (update_objects): Use new parameter above.
	* gui/memos-component.c: (selector_tree_drag_data_received):
	Use result of call 'update_objects' and prevent delete object when
	the call fails.

2007-08-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #201201

	* gui/e-week-view.h: (struct _EWeekView): Added properties.
	* gui/e-week-view.c: (e_week_view_init),
	(e_week_view_on_button_press): First click stores actual selection
	in structure and when second click was inside this selection, then
	the selection is restored and used for new appointment.

	** Fix for bug #201202

	* gui/e-day-view.h: (struct _EDayView): Added properties.
	* gui/e-day-view.c: (e_day_view_init),
	(e_day_view_on_top_canvas_button_press),
	(e_day_view_on_main_canvas_button_press):
	Same as with week view above.

2007-08-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #338803

	* gui/e-meeting-time-sel-item.c:
	(e_meeting_time_selector_item_button_press):
	Keeps actual meeting duration, not reset to half/full hour.

	* gui/dialogs/event-page.c: (update_time):